# paper-trading-rebuild

./: .env.example  .gitignore  AGENTS.md  DECISIONS.md  PLAN_autonomous_simulation.md  PLAN_historical_sim.md  README.md  ROADMAP.md  SPEC-v3.md  SPEC.md  docker-compose.yml  pyproject.toml  requirements.txt
.tasks/: P1-build-meta-cog-loop.md  P1-wire-learning-loop-pg.md  P2-agent-reflection-cron.md  P2-news-discovery-pipeline.md  P2-phased-trading-evolution.md  P2-tool-improvement-suggestions.md  P2-virtual-learner-evolution.md  README.md  casper-feedback-20260713.md  orchestrator.py  orchestrator_state.json
config/: data_bus.yaml
docs/: DATA_BUS_API.md  TRADER_READINESS.md
logs/: learning_loop_verification.html
migrations/: 002_sweep_results_validation_meta_down.sql  002_sweep_results_validation_meta_up.sql  004_circuit_breaker_down.sql  004_circuit_breaker_up.sql  005_system_params_down.sql  005_system_params_up.sql  008_promotion_tiers_down.sql  008_promotion_tiers_up.sql
prompts/: kairos.txt
reports/: bug-analysis.md
scripts/: backfill_bars.py  check_circuit_breakers.py  create_virtual_trader.py  deploy_skills.py  gateway_healthcheck_watchdog.py  migrate_sqlite_to_pg.py  nightly_pipeline.py  nightly_synthesis.py  nightly_trend_card.py  promotion_check.py  register_virtual.py  seed_agents.py  seed_test_data.py  seed_virtual_traders.py  stock_discovery.py  sync_decisions_to_pg.py  tick_cron.py  tick_prep.py  tick_prompt.py
specs/: agent-reflection-loop.md  operational-hygiene.md  virtual-trader-rotation.md  virtual-traders.md
src/: agent_files.py  (+27 more)
(+91 files in other folders)
